// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 70,
  "sha": "dc351d80eafc3a94",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 29,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 85,
  "sha": "5305d60a5909cb03",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 21,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 64,
  "sha": "c22b4b41d76e9434",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 24,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 69,
  "sha": "d0e4161a9ab2cca1",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 65,
  "sha": "6094cd37c6cc80b7",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 25,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 71,
  "sha": "1610a4b5507e6da8",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 30,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 80,
  "sha": "8886cabaf88efca3",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 29,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 78,
  "sha": "4693b0433e7f3464",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 23,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 75,
  "sha": "3aaa7ee849c1b117",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 42,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 97,
  "sha": "980c9f930b7cef2d",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 65,
  "sha": "4cb7b7d3bf64e2c6",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: stimulate renders + pins a digest 1`] = `
{
  "buttons": 21,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 65,
  "sha": "1f76a3f0a5e3d611",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 65,
  "sha": "200a030598b3280a",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: synapses renders + pins a digest 1`] = `
{
  "buttons": 23,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 67,
  "sha": "f0260e70d93afbd4",
  "svgs": 1,
}
`;
